# runtime_stm32h5

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.gitea/workflows/: build.yml
.github/workflows/: build.yml  release.yml
app/: CMakeLists.txt  hello.c  secure_manager_api.c  secure_manager_api.h
cmake/: comp_gcc_flags.cmake  install-rules.cmake  postbuild.cmake
inc/platform/: platform.h
src/: CMakeLists.txt  detection.c  detection.h  main.c  main.h  platform.c  rng.c  startup.s  stm32h573.ld  stm32h5xx_hal_conf.h  stm32h5xx_hal_msp.c  stm32h5xx_it.c  stm32h5xx_it.h  system_stm32h5xx_ns.c  trace.c  uart.c  update_fw.c  update_fw.h  ymodem.c  ymodem.h
src/CMSIS/: CMakeLists.txt
src/CMSIS/startup_gnu/: STM32H573xx_FLASH.ld  STM32H573xx_RAM.ld
src/drivers/: CMakeLists.txt
src/drivers/inc/: stm32h5xx_hal_def.h
src/drivers/src/: stm32h5xx_ll_rng.c
src/drivers_config/: CMakeLists.txt  stm32h5xx_hal_conf.h  stm32h5xx_it.h
src/stm32hal/Inc/: stm32h5xx_hal_rtc_ex.h  stm32h5xx_ll_rtc.h
src/system/: CMakeLists.txt  stm32h5xx_hal_msp.c  stm32h5xx_it.c  syscalls.c  sysmem.c  system_stm32h5xx.c
toolchains/: gcc-armv8_m.main-unknown-none-eabi.cmake  gcc-armv8m.main-unknown-none-eabi.toolchain
utils/: parse_itm.py  pyocd.yml  symbol_wrapper.py
